--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,102 @@
     <!--==================== LOADER ====================-->
 
     <!--==================== HEADER ====================-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="image/logo.png" alt="Logo" class="nav__logo-img" />
+          coffee
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#products" class="nav__link">Products</a>
+            </li>
+            <li class="nav__item">
+              <a href="#premium" class="nav__link">Premium</a>
+            </li>
+            <li class="nav__item">
+              <a href="#blog" class="nav__link">Blog</a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="bx bx-x"></i>
+          </div>
+        </div>
+
+        <!-- Toggle Button -->
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="bx bx-grid-alt"></i>
+        </div>
+      </nav>
+    </header>
+
+    <!--==================== MAIN ====================-->
+    <main>
+      <!--==================== HOME ====================-->
+      <section class="home grid" id="home">
+        <div class="home__container">
+          <div class="home__content container">
+            <h1 class="home__title">
+              Choose Your Favorite Coffee And Enjoy<span>.</span>
+            </h1>
+            <p class="home__description">Buy the best and delicious coffees.</p>
+
+            <div class="home__data">
+              <div class="home__data-group">
+                <h2 class="home__data-number">120K</h2>
+                <h3 class="home__data-title">Testimonials</h3>
+                <p class="home__data-description">
+                  Testimonials from various customers who trust us.
+                </p>
+              </div>
+
+              <div class="home__data-group">
+                <h2 class="home__data-number">340+</h2>
+                <h3 class="home__data-title">Exclusive Product</h3>
+                <p class="home__data-description">
+                  Premium preparation with quality ingredients.
+                </p>
+              </div>
+            </div>
+
+            <a href="#specialty">
+              <img
+                src="image/scroll.png"
+                alt="scroll-img"
+                class="home__scroll"
+              />
+            </a>
+          </div>
+        </div>
+
+        <img src="image/home.png" alt="HomePage" class="home__img" />
+      </section>
+
+      <!--==================== ESPECIALTY ====================-->
+      <div class="specialty section container" id="specialty"></div>
+
+      <!--==================== PRODUCTS ====================-->
+      <section class="products section" id="products"></section>
+
+      <!--==================== QUALITY ====================-->
+      <section class="quality section" id="premium"></section>
+
+      <!--==================== LOGOS ====================-->
+      <section class="logo section"></section>
+
+      <!--==================== BLOG ====================-->
+      <section class="blog section" id="blog"></section>
+    </main>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="js/script.js"></script>
   </body>
 </html>
+
+<!-- 20min 09sec complted -->
