--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,243 @@
       </div>
 
       <!--==================== PRODUCTS ====================-->
-      <section class="products section" id="products"></section>
+      <section class="products section" id="products">
+        <div class="products__container container">
+          <h2 class="section__title">Choose our delicious and best products</h2>
+
+          <ul class="products__filter">
+            <li
+              class="products__item products__line active-product"
+              data-filter=".delicacies"
+            >
+              <h3 class="products__title">New Delicacies</h3>
+              <span class="products__stock">03 products</span>
+            </li>
+            <li class="products__item products__line" data-filter=".coffee">
+              <h3 class="products__title">Hot Coffee</h3>
+              <span class="products__stock">04 products</span>
+            </li>
+            <li class="products__item products__line" data-filter=".cake">
+              <h3 class="products__title">Cakes And Delicacies</h3>
+              <span class="products__stock">04 products</span>
+            </li>
+          </ul>
+
+          <div class="products__content grid">
+            <!--========= Delicacies =========--->
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img
+                  src="image/delicacies1.png"
+                  alt="Delicacies"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$5</h2>
+                <h3 class="products__name">Cookies</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img
+                  src="image/delicacies2.png"
+                  alt="Delicacies2"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$6</h2>
+                <h3 class="products__name">Croissant</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img
+                  src="image/delicacies3.png"
+                  alt="Delicacies"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$4</h2>
+                <h3 class="products__name">Croissant</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <!--========= Coffee =========--->
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img
+                  src="image/coffee1.png"
+                  alt="Black Coffee"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$7</h2>
+                <h3 class="products__name">Black Coffee</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img
+                  src="image/coffee2.png"
+                  alt="Pure Coffee"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$12</h2>
+                <h3 class="products__name">Pure Coffee</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img
+                  src="image/coffee3.png"
+                  alt="Milk Coffee"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">#9</h2>
+                <h3 class="products__name">Milk Coffee</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img
+                  src="image/coffee4.png"
+                  alt="Moka Coffee"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">#20</h2>
+                <h3 class="products__name">Moka Coffee</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <!--========= cake =========--->
+            <article class="products__card cake">
+              <div class="products__shape">
+                <img
+                  src="image/cake1.png"
+                  alt="Cream Cake"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$10</h2>
+                <h3 class="products__name">Cream Cake</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card cake">
+              <div class="products__shape">
+                <img
+                  src="image/cake2.png"
+                  alt="Chocolate Croissant"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">#15</h2>
+                <h3 class="products__name">Chocolate Croissant</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card cake">
+              <div class="products__shape">
+                <img
+                  src="image/cake3.png"
+                  alt="Pancake"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$20</h2>
+                <h3 class="products__name">Pancake</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+
+            <article class="products__card cake">
+              <div class="products__shape">
+                <img
+                  src="image/cake4.png"
+                  alt="Milk Cake"
+                  class="products__img"
+                />
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$12</h2>
+                <h3 class="products__name">Milk Cake</h3>
+
+                <button class="button products__cta">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
 
       <!--==================== QUALITY ====================-->
       <section class="quality section" id="premium"></section>
@@ -164,6 +400,7 @@
     </main>
 
     <!--=============== MAIN JS ===============-->
+    <script src="js/vendor/mixitup.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
