adding section Quality

--- a/index.htm
+++ b/index.htm
@@ -390,7 +390,47 @@
       </section>
 
       <!--==================== QUALITY ====================-->
-      <section class="quality section" id="premium"></section>
+      <section class="quality section" id="premium">
+        <div class="quality__container container">
+          <h2 class="section__title">
+            We offer a premium and better quality preparation just for you!
+          </h2>
+
+          <div class="quality__content grid">
+            <div class="quality__image">
+              <img
+                src="image/quality1.png"
+                alt="Quality Big"
+                class="quality_big"
+              />
+              <img
+                src="image/quality2.png"
+                alt="Quality Small"
+                class="quality_small"
+              />
+            </div>
+
+            <div class="quality_data">
+              <h1 class="quality__title">Premium Coffee</h1>
+              <h2 class="quality__price">$94.99</h2>
+              <span class="quality__special">Especial Price</span>
+              <p class="quality__decription">
+                We are delighted with our coffee. That's why you get the best
+                premium coffee plus the kettle made of resistant materials that
+                you see in the image, for a special price.
+              </p>
+
+              <div class="quality__buttons">
+                <button class="button">Buy Now</button>
+
+                <a href="#" class="quality_button"
+                  >See More <i class="bx bx-right-arrow-alt"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== LOGOS ====================-->
       <section class="logo section"></section>
