adding coffee logos

--- a/index.htm
+++ b/index.htm
@@ -433,7 +433,15 @@
       </section>
 
       <!--==================== LOGOS ====================-->
-      <section class="logo section"></section>
+      <section class="logo section">
+        <div class="logo__container container grid">
+          <img src="image/logocoffee1.png" alt="Coffee 1" class="logo__img" />
+          <img src="image/logocoffee2.png" alt="Coffee 2" class="logo__img" />
+          <img src="image/logocoffee3.png" alt="Coffee 3" class="logo__img" />
+          <img src="image/logocoffee4.png" alt="Coffee 4" class="logo__img" />
+          <img src="image/logocoffee5.png" alt="Coffee 5" class="logo__img" />
+        </div>
+      </section>
 
       <!--==================== BLOG ====================-->
       <section class="blog section" id="blog"></section>
