--- a/index.htm
+++ b/index.htm
@@ -444,7 +444,66 @@
       </section>
 
       <!--==================== BLOG ====================-->
-      <section class="blog section" id="blog"></section>
+      <section class="blog section" id="blog">
+        <div class="blog__container container">
+          <h2 class="section__title">
+            Our Blogs Coffee with trending topic for this week
+          </h2>
+
+          <div class="blog__content grid">
+            <article class="blog__card">
+              <div class="blog__image">
+                <img src="image/blog3.jpg" alt="Blog 01" />
+                <a href="#" class="blog__button"
+                  ><i class="bx bx-right-arrow-alt"></i
+                ></a>
+              </div>
+              <div class="blog__data">
+                <h2 class="blog__title">10 Coffee Recommendations</h2>
+                <p class="blog__description">
+                  The blogs about coffee will help you a lot about how it is
+                  prepared, its waiting time, for a good quality coffee.
+                </p>
+                <div class="blog__stack">
+                  <div class="blog__reaction">
+                    <i class="bx bxs-comment"></i>
+                    <span>12</span>
+                  </div>
+                  <div class="blog__reaction">
+                    <i class="bx bx-show"></i>
+                    <span>76.5K</span>
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="blog__card">
+              <div class="blog__image">
+                <img src="image/blog4.jpg" alt="Blog 01" />
+                <a href="#" class="blog__button"
+                  ><i class="bx bx-right-arrow-alt"></i
+                ></a>
+              </div>
+              <div class="blog__data">
+                <h2 class="blog__title">12 Benefits Of Drinking Coffee</h2>
+                <p class="blog__description">
+                  The blogs about coffee will help you a lot about how it is
+                  prepared, its waiting time, for a good quality coffee.
+                </p>
+                <div class="blog__stack">
+                  <div class="blog__reaction">
+                    <i class="bx bxs-comment"></i>
+                    <span>45</span>
+                  </div>
+                  <div class="blog__reaction">
+                    <i class="bx bx-show"></i>
+                    <span>336k</span>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=============== MAIN JS ===============-->
