--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link">Home</a>
+              <a href="#home" class="nav__link active-link">Home</a>
             </li>
             <li class="nav__item">
               <a href="#products" class="nav__link">Products</a>
@@ -506,10 +506,92 @@
       </section>
     </main>
 
+    <!--==================== FOOTER ====================-->
+    <footer class="footer">
+      <div class="footer__container container">
+        <h1 class="footer__title">coffee .</h1>
+
+        <div class="footer__content grid">
+          <div class="footer__data">
+            <p class="footer__description">Subscribe to our newsletter</p>
+
+            <div class="footer__newsletter">
+              <input
+                type="email"
+                name=""
+                id=""
+                placeholder="Enter your email address"
+                class="footer__input"
+              />
+              <button class="footer__button">
+                Join the newsletter <i class="bx bx-right-arrow-alt"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="footer__data">
+            <h2 class="footer__subtitle">Address</h2>
+            <p class="footer__information">
+              9876 Hacienda Av. <br />
+              Lima, La Libertad 123, Perú
+              <img src="image/footerflag.png" alt="Flag" class="footer__flag" />
+            </p>
+          </div>
+
+          <div class="footer__data">
+            <h2 class="footer__subtitle">Contact</h2>
+            <p class="footer__information">
+              +987654321 <br />
+              coffee@email.com
+            </p>
+          </div>
+
+          <div class="footer__data">
+            <h2 class="footer__subtitle">Office</h2>
+            <p class="footer__information">
+              Monday - Saturday <br />
+              9AM - 10PM
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__group">
+          <ul class="footer__social">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+          </ul>
+
+          <span class="footer__copy"
+            >&#169; Bedimcode. All rigths reserved
+          </span>
+        </div>
+      </div>
+    </footer>
+
+    <!--=============== SCROLL UP ===============-->
+    <a href="#" class="scrollUp" id="scroll-up">
+      <i class="bx bxs-up-arrow-alt"></i>
+      <!-- <i class="ri-arrow-up-fill scrollup__icon"></i> -->
+    </a>
+
     <!--=============== MAIN JS ===============-->
     <script src="js/vendor/mixitup.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
-
-<!-- 20min 09sec complted -->
